# mnemos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json  run_mnemos_mcp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  host_compatibility.yml
.github/workflows/: ci.yml  pypi.yml
agents/: memory-orchestrator.md  mnemos-curator.md  mnemos-recall.md
benchmarks/datasets/: contradiction-update-v1.jsonl  cross-project-scope-v1.jsonl  preference-drift-v1.jsonl  real-world-feedback-v1.jsonl
commands/mnemos/: consolidate.md  prime.md
docs/: MCP_INTEGRATION.md  claude-code-hooks.json  clawhub-skill.md  client-compatibility-matrix.md  codex.md  cursor-antigravity.md  mcp-transport-contract.md  production-readiness-checklist.md  public-beta-launch.md  public-release-package.md  release-checklist.md  retrieval-benchmarks.md
docs/demos/: claude-code-continuity.md
docs/mcp-configs/: claude-desktop.json  cline.json  codex.json  cursor.json  generic-stdio.json  windsurf.json
docs/plans/: 2026-03-06-production-readiness.md  2026-03-09-public-release-package.md  2026-03-10-inspectability.md  2026-03-12-neo4j-migration-and-host-validation.md  2026-03-14-sqlite-definitive-backend.md  2026-03-16-v0.4.0-user-trust-release.md  2026-03-25-v0.5.0-proof-of-value-release.md
docs/profiles/: scale-external-qdrant.md  (+2 more)
examples/: basic_usage.py  full_pipeline.py  mcp_agent_demo.py
mnemos/: __init__.py  __main__.py  antigravity.py  benchmark.py  cli.py  config.py  control_plane.py  curation.py  engine.py  health.py  hook_autostore.py  hosts.py  inspectability.py  mcp_server.py  memory_safety.py  observability.py  runtime.py  settings.py  types.py  ui_server.py
tests/: conftest.py  test_benchmark.py  test_ci_workflow.py  test_cli.py  test_control_plane.py  test_docs_consistency.py  test_embeddings.py  test_engine.py  test_feedback_eval_export.py  test_feedback_events.py  test_health.py  test_hook_autostore.py  test_hosts.py  test_inspectability.py  test_llm.py  test_mcp_compatibility.py  test_mcp_server.py  test_mcp_tier2_smoke.py  test_memory_safety.py  test_modules.py  test_plugin_packaging.py  test_reliability.py  test_runtime.py  test_settings.py  test_storage_neo4j.py  test_storage_qdrant.py  test_storage_sqlite.py  test_storage_touch.py  test_types.py  test_ui_server.py
(+21 files in other folders)
